--- a/WarehouseMVC/WarehouseMVC.csproj
+++ b/WarehouseMVC/WarehouseMVC.csproj
@@ -172,6 +172,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\Entrepot.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
@@ -240,6 +241,7 @@
     <Content Include="Views\Fournisseur\Index.cshtml" />
     <Content Include="Views\Fournisseur\AjoutCategorieFournisseur.cshtml" />
     <Content Include="Views\Stock\GetMoveStock_By_ArticleId.cshtml" />
+    <Content Include="Views\Stock\GetStockInventaire.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
